<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvToday"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardCornerRadius="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="30dp"
                android:background="#0074B3"
                >

                <TextView
                    android:id="@+id/txtDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/today"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtDay"
                    android:text="@string/_29_11_2020"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/txtForecast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/rain"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/imgCloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_wb_cloudy_white_24dp"
                    android:layout_below="@+id/txtDate"
                    android:layout_marginTop="20dp"/>

                <ImageView
                    android:id="@+id/imgWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_toys_white_24dp"
                    android:layout_below="@id/imgCloud"/>

                <ImageView
                    android:id="@+id/imgHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_colorize_white_24dp"
                    android:layout_below="@id/imgWind"/>

                <TextView
                    android:id="@+id/txtCloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtDate"
                    android:layout_toEndOf="@+id/imgCloud"
                    android:text="@string/_90"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/txtWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/imgWind"
                    android:layout_marginStart="10dp"
                    android:text="@string/_2m_s"
                    android:layout_below="@+id/txtCloud"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:text="@string/_100"
                    android:layout_below="@+id/txtWind"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/imgHumidity"/>

                <TextView
                    android:id="@+id/txtDegrees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10"
                    android:textSize="40sp"
                    android:layout_below="@+id/txtForecast"
                    android:layout_alignParentEnd="true"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/txtMinMaxDegrees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10_10"
                    android:layout_below="@+id/txtDegrees"
                    android:layout_alignParentEnd="true"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shower_rain"
                    android:layout_alignParentEnd="true"
                    android:textColor="@android:color/white"
                    android:layout_below="@id/txtMinMaxDegrees"/>

                <ImageView
                    android:id="@+id/imgForecast"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_wi_rain"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>



            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvTomorrow"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardCornerRadius="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="30dp"
                android:background="#0074B3"
                >

                <TextView
                    android:id="@+id/txtDayTomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/tomorrow"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtDateTomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtDayTomorrow"
                    android:text="@string/_29_11_2020"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/txtForecastTomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/rain"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/imgCloudTomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_wb_cloudy_white_24dp"
                    android:layout_below="@+id/txtDateTomorrow"
                    android:layout_marginTop="20dp"/>

                <ImageView
                    android:id="@+id/imgWindTomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_toys_white_24dp"
                    android:layout_below="@id/imgCloudTomorrow"/>

                <ImageView
                    android:id="@+id/imgHumidityTomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_colorize_white_24dp"
                    android:layout_below="@id/imgWindTomorrow"/>

                <TextView
                    android:id="@+id/txtCloudTomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtDateTomorrow"
                    android:layout_toEndOf="@+id/imgCloudTomorrow"
                    android:text="@string/_90"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/txtWindTomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/imgWindTomorrow"
                    android:layout_marginStart="10dp"
                    android:text="@string/_2m_s"
                    android:layout_below="@+id/txtCloudTomorrow"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtHumidityTomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:text="@string/_100"
                    android:layout_below="@+id/txtWindTomorrow"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/imgHumidityTomorrow"/>

                <TextView
                    android:id="@+id/txtDegreesTomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10"
                    android:textSize="40sp"
                    android:layout_below="@+id/txtForecastTomorrow"
                    android:layout_alignParentEnd="true"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="20dp"/>

                <TextView
                    android:id="@+id/txtMinMaxDegreesTomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10_10"
                    android:layout_below="@+id/txtDegreesTomorrow"
                    android:layout_alignParentEnd="true"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/txtDescriptionTomorrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shower_rain"
                    android:layout_alignParentEnd="true"
                    android:textColor="@android:color/white"
                    android:layout_below="@id/txtMinMaxDegreesTomorrow"/>

                <ImageView
                    android:id="@+id/imgForecastTomorrow"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_wi_rain"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"/>



            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>